[package]
name = "my_core"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.55"
js-sys = "0.3.32"
cfg-if = "0.1.10"
log = "0.4.8"
num-traits = "0.2.10"
num-derive = "0.3.0"
serde = { version = "1.0.103", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen-futures= "0.4.5"
console_log = { version = "0.1.2", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
shipyard = { git= "https://github.com/leudz/shipyard.git", features = ["proc"], default-features = false}
web-sys = { version = "0.3.32", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'ShadowRoot'
]}

# Just for tests
strum = {version = "0.16.0", optional = true }
strum_macros = {version = "0.16.0", optional = true}

[features]
default = ["wee_alloc"]
ts_test = ["strum", "strum_macros"]
dev = ["wee_alloc", "console_log", "console_error_panic_hook"]
