[package]
name = "my_core"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.56"
wasm-logger = { version = "0.2.0", optional = true }
js-sys = "0.3.33"
cfg-if = "0.1.10"
log = "0.4.8"
num-traits = "0.2.10"
num-derive = "0.3.0"
serde = { version = "1.0.104", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
serde_json = "1.0.44"
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen-futures= "0.4.6"
console_error_panic_hook = { version = "0.1.6", optional = true }
shipyard = { git= "https://github.com/leudz/shipyard.git", features = ["proc", "serialization"], default-features = false}
web-sys = { version = "0.3.33", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'ShadowRoot',
  'Performance'
] }

# Just for tests
strum = { version = "0.17.1", optional = true }
strum_macros = { version = "0.17.1", optional = true }

[features]
default = ["wee_alloc"]
ts_test = ["strum", "strum_macros"]
dev = ["wee_alloc", "wasm-logger", "console_error_panic_hook"]
